# Cyber-Junk-Bot

./: .gitignore  index.html  index.md  keep_alive.py  main.py  pyproject.toml  script.js  style.css
cogs/: antispam.py  api.py  delete.py  exploitdb.py  game.py  info.py  mute.py  podcast.py  poll.py  rocket.py  roles.py  rules.py  twitter.py  warning.py
cogs/bot_files/: blockwords.json  phish.db
cogs/static/: blacklist.txt  security.txt
cogs/templates/: 404.html
config/: cogs.json  info.txt  rules.txt
