[tool.poetry]
name = "repl_python3_Cyber-Junk-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
"discord.py" = "^1.7.3"
search-that-hash = "^0.2.8"
replit = "^3.2.4"
bs4 = "^0.0.1"
Flask = "^2.0.1"
google = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
